@@ -67,7 +67,7 @@
     'iwarp' => { libdep => 'gtk', ui => 1 },
     'jigsaw' => { libdep => 'gtk', ui => 1 },
     'laplace' => { libdep => 'glib', ui => 1 },
-    'lcms' => { libdep => 'glib', optional => 1, extralibs => 1 },
+    'lcms' => { libdep => 'glib', optional => 1 },
     'lens' => { libdep => 'gtk', ui => 1 },
     'lic' => { libdep => 'gtk', ui => 1 },
     'mail' => { libdep => 'gtk', ui => 1, optional => 1 },
@@ -108,7 +108,7 @@
     'rotate' => { libdep => 'glib' },
     'sample_colorize' => { libdep => 'gtk', ui => 1 },
     'scatter_hsv' => { libdep => 'gtk', ui => 1 },
-    'screenshot' => { libdep => 'gtk', ui => 1, extralibs => 1 },
+    'screenshot' => { libdep => 'gtk', ui => 1, optional => 1 },
     'sel_gauss' => { libdep => 'gtk', ui => 1, cflags => 'MMX_EXTRA_CFLAGS' },
     'semiflatten' => { libdep => 'glib' },
     'sharpen' => { libdep => 'gtk', ui => 1 },
